--- a/css/menu.css
+++ b/css/menu.css
@@ -9,11 +9,12 @@ body {
 	margin:0;
 	padding: 0;
 	background-color: #888888;
-	position: relative;
+	
 }
 
 .menu li {
 	float:left;
+	position: relative;
 }
 
 .menu a {
@@ -37,6 +38,19 @@ body {
 
 .menu .submenu {
 	position: absolute;
+	top:50px;
+	left: 0;
+
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	opacity: 0;
+	visibility: hidden;
+
+	-webkit-transition: all 400ms ease;
+	-moz-transition   : all 400ms ease;
+	-o-transition     : all 400ms ease;
+	-ms-transition    : all 400ms ease;
+	transition        : all 400ms ease;
 }
 
 .menu .submenu li {
@@ -44,4 +58,12 @@ body {
 }
 .menu .submenu a {
 	width: 220px;
+}
+
+.menu li:hover .submenu {
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	-moz-opacity: 1;
+	opacity: 1;
+	visibility: visible;
 }
